# first_car_R1

src/chuankou/: CMakeLists.txt  package.xml
src/chuankou/include/chuankou/: autopath.h
src/chuankou/install/: local_setup.sh  setup.sh
src/chuankou/install/chuankou/share/chuankou/: package.bash  package.zsh
src/chuankou/install/cychuankou/lib/cychuankou/: position_publisher
src/chuankou/install/cychuankou/share/cychuankou/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/chuankou/install/cychuankou/share/cychuankou/cmake/: cychuankouConfig.cmake
src/chuankou/log/: latest_build
src/chuankou/src/: autopath.cpp  receive.cpp  send.cpp
src/common_launch_pkg/: package.xml  setup.cfg  setup.py
src/common_launch_pkg/launch/: common_launch.py
src/fyt_msg/: CMakeLists.txt  package.xml
src/fyt_pos/: package.xml  setup.cfg  setup.py
src/fyt_pos/fyt_pos/: aruco.py  path.py  picture.py  radar_position.py
